Migrates URLfiltering logic out of URLQueue Refactors  application to use URI class to represent addresses instead of URL in order to address major headaches with URL class's .equals() running a an unnecessary blocking IP lookup everytime a comparison is made Adds CrawlerSettings class that will load application settings from a config file