@@ -3,6 +3,7 @@ package crawler;
 import application.crawler.domain.Domain;
 import org.junit.Before;
 
+import java.net.URI;
 import java.net.URL;
 
 public class DomainTest {
@@ -10,7 +11,7 @@ public class DomainTest {
 
     @Before
     public void setUp() throws Exception {
-        domain =  new Domain(new URL("http://jgrapht.org/"));
+        domain =  new Domain(new URI("http://jgrapht.org/"));
         domain.run();
     }
 
