@@ -4,6 +4,7 @@ import application.crawler.util.Request;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.net.URI;
 import java.net.URL;
 
 public class RequestTest {
@@ -11,7 +12,7 @@ public class RequestTest {
 
     @Before
     public void setUp() throws Exception {
-        request = new Request(new URL("http://www.google.com/"));
+        request = new Request(new URI("http://www.google.com/"));
         request.setConnectionTimeout(5000);
         request.setRequestMethod("GET");
         request.setUserAgent("Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9.2.2) Gecko/20100316 Firefox/3.6.2");
