@@ -4,12 +4,10 @@ import application.crawler.domain.Robotstxt;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
-import java.net.URL;
-
+import java.net.URI;
 
 public class RobotstxtTest {
     private Robotstxt robotsTxt;
@@ -45,17 +43,17 @@ public class RobotstxtTest {
     @Test
     public void testUrlIsAllowed() throws Exception {
         //tests /*
-        assert(!robotsTxt.urlIsAllowed(new URL("http://www.test.com/allUAdisallowed/testAllClause/testAllClause.html")));
-        assert(!robotsTxt.urlIsAllowed(new URL("http://www.test.com/allUAdisallowed/testAllClause/")));
+        assert(!robotsTxt.urlIsAllowed(new URI("http://www.test.com/allUAdisallowed/testAllClause/testAllClause.html")));
+        assert(!robotsTxt.urlIsAllowed(new URI("http://www.test.com/allUAdisallowed/testAllClause/")));
 
         //tests explicitly allowed path, where the subpatch(s) match a catch-all disallow directive
-        assert( robotsTxt.urlIsAllowed(new URL("http://www.test.com/allUAdisallowed/testAllClause/explicitlyAllowedPath.html")));
+        assert( robotsTxt.urlIsAllowed(new URI("http://www.test.com/allUAdisallowed/testAllClause/explicitlyAllowedPath.html")));
         //tests URLS whose paths do not fall under either a disallow or allow directive, should be implicitly allowed
-        assert( robotsTxt.urlIsAllowed(new URL("http://www.test.com/whatever/iShouldBeAllowed.html")));
-        assert( robotsTxt.urlIsAllowed(new URL("http://www.test.com/allowed/iShouldBeAllowed.html")));
+        assert( robotsTxt.urlIsAllowed(new URI("http://www.test.com/whatever/iShouldBeAllowed.html")));
+        assert( robotsTxt.urlIsAllowed(new URI("http://www.test.com/allowed/iShouldBeAllowed.html")));
 
         //disallowed paths applicable to other crawlers, not us, should be allowed
-        assert( robotsTxt.urlIsAllowed(new URL("http://www.test.com/testdisallowedUA1/disallowed/disallowed1.html")));
-        assert( robotsTxt.urlIsAllowed(new URL("http://www.test.com/testdisallowedUA2/disallowed/disallowed2.html")));
+        assert( robotsTxt.urlIsAllowed(new URI("http://www.test.com/testdisallowedUA1/disallowed/disallowed1.html")));
+        assert( robotsTxt.urlIsAllowed(new URI("http://www.test.com/testdisallowedUA2/disallowed/disallowed2.html")));
     }
 }
